--- a/ckanext/dia_theme/less/dataset.less
+++ b/ckanext/dia_theme/less/dataset.less
@@ -283,3 +283,8 @@
 .resource-view {
   margin-top: 20px;
 }
+
+/* override for rua styling */
+.tag-list li .tag {
+  line-height: 20px
+}
